Make string division do path joining.

--- a/test cases/common/116 pathjoin/meson.build
+++ b/test cases/common/116 pathjoin/meson.build
@@ -15,3 +15,10 @@ assert(join_paths(['foo', 'bar', 'baz']) == 'foo/bar/baz', 'Path joining is brok
 assert(join_paths(['/foo', 'bar']) == '/foo/bar', 'Path joining is broken')
 assert(join_paths(['foo', '/bar']) == '/bar', 'Absolute path joining is broken')
 assert(join_paths(['/foo', '/bar']) == '/bar', 'Absolute path joining is broken')
+
+# Division operator should do the same as join_paths
+assert('foo' / 'bar'       == 'foo/bar',     'Path division is broken')
+assert('foo' /'bar' /'baz' == 'foo/bar/baz', 'Path division is broken')
+assert('/foo' / 'bar'      == '/foo/bar',    'Path division is broken')
+assert('foo' / '/bar'      == '/bar',        'Absolute path division is broken')
+assert('/foo' / '/bar'     == '/bar',        'Absolute path division is broken')
