Extend test to when both name_{suf,pre}fix: are used

--- a/test cases/common/207 install name_prefix name_suffix/meson.build
+++ b/test cases/common/207 install name_prefix name_suffix/meson.build
@@ -5,3 +5,6 @@ static_library('bar', 'libfile.c', name_prefix: '', install : true)
 
 shared_library('baz', 'libfile.c', name_suffix: 'cheese', install : true)
 static_library('qux', 'libfile.c', name_suffix: 'cheese', install : true)
+
+shared_library('corge', 'libfile.c', name_prefix: 'bow', name_suffix: 'stern', install : true)
+static_library('grault', 'libfile.c', name_prefix: 'bow', name_suffix: 'stern', install : true)
