--- a/test cases/java/8 codegen custom target/com/mesonbuild/meson.build
+++ b/test cases/java/8 codegen custom target/com/mesonbuild/meson.build
@@ -4,5 +4,5 @@ config_file = custom_target('confgen',
                             input : 'Config.java.in',
                             output : 'Config.java',
                             command : [python, '-c',
-                              'import shutil; import sys; shutil.copy(sys.argv[1], sys.argv[2])',
+                              'import shutil, sys, time; time.sleep(1); shutil.copy(sys.argv[1], sys.argv[2])',
                               '@INPUT@', '@OUTPUT@'])
