Fixed some Debian / Ubuntu edege case

--- a/mesonbuild/dependencies/data/CMakeLists.txt
+++ b/mesonbuild/dependencies/data/CMakeLists.txt
@@ -1,4 +1,18 @@
 cmake_minimum_required(VERSION ${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}.${CMAKE_PATCH_VERSION} )
+
+# Inspired by CMakeDetermineCompilerABI.cmake to set CMAKE_LIBRARY_ARCHITECTURE
+if(CMAKE_LIBRARY_ARCHITECTURE_REGEX)
+  if(NOT DEFINED CMAKE_LIBRARY_ARCHITECTURE)
+    file(GLOB implicit_dirs RELATIVE /lib /lib/*-linux-gnu* )
+    foreach(dir ${implicit_dirs})
+      if("${dir}" MATCHES "${CMAKE_LIBRARY_ARCHITECTURE_REGEX}")
+        set(CMAKE_LIBRARY_ARCHITECTURE "${dir}")
+        break()
+      endif()
+    endforeach()
+  endif()
+endif()
+
 find_package("${NAME}" QUIET)
 
 set(PACKAGE_FOUND FALSE)
