--- a/ci/azure-steps.yml
+++ b/ci/azure-steps.yml
@@ -58,6 +58,21 @@ steps:
        $env:Path = "C:\java\jdk\jdk1.8.0_102\bin\;$env:Path"
      }
 
+     # install boost (except for clang-cl)
+     if ($env:arch -eq 'x86') { $boost_bitness = '32' } else { $boost_bitness = '64' }
+     if ($env:compiler -eq 'msvc2015') {
+       $boost_version = '1.60.0' ; $boost_abi_tag = '14.0'
+     } elseif ($env:compiler -eq 'msvc2017') {
+       $boost_version = '1.64.0' ; $boost_abi_tag = '14.1'
+     }
+     if ($boost_version) {
+       $boost_filename = $boost_version.Replace('.', '_')
+       Downloadfile -Source "https://sourceforge.net/projects/boost/files/boost-binaries/$boost_version/boost_$boost_filename-msvc-$boost_abi_tag-$boost_bitness.exe" -Destination boost_$boost_filename-msvc-$boost_abi_tag-$boost_bitness.exe
+       Start-Process "boost_$boost_filename-msvc-$boost_abi_tag-$boost_bitness.exe" -ArgumentList "/dir=$(System.WorkFolder)\boost_$boost_filename /silent" -Wait
+       $env:BOOST_ROOT = "$(System.WorkFolder)\boost_$boost_filename"
+       $env:Path = "$env:Path;$env:BOOST_ROOT\lib$boost_bitness-msvc-$boost_abi_tag"
+     }
+
      # install D compiler and dub packages
      if ($env:backend -eq 'ninja') {
           & .\ci\install-dmd.ps1
