CI: port cygwin job from appveyor to azure-pipelines

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -22,10 +22,6 @@ environment:
       compiler: msys2-mingw
       backend: ninja
 
-    - arch: x64
-      compiler: cygwin
-      backend: ninja
-
 platform:
   - x64
 
@@ -80,7 +76,6 @@ install:
   # Set paths and config for each build type.
   - cmd: if %compiler%==msvc2015 ( call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" %arch% )
   - cmd: if %compiler%==msvc2017 ( call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\Common7\Tools\VsDevCmd.bat" -arch=%arch% )
-  - cmd: if %compiler%==cygwin ( set PYTHON=python3 ) else ( set PYTHON=python )
   # MinGW setup, lines are split to prevent "The input line is too long." error.
   - cmd: if %arch%==x86 ( set "PACMAN_ARCH=i686" ) else ( set "PACMAN_ARCH=x86_64" )
   - cmd: if %arch%==x86 ( set "PACMAN_BITS=32" ) else ( set "PACMAN_BITS=64" )
@@ -88,10 +83,8 @@ install:
   - cmd: if %compiler%==msys2-mingw ( set "MESON_PYTHON_PATH=C:\msys64\mingw%PACMAN_BITS%\bin" )
   - cmd: if %compiler%==msys2-mingw ( set "PYTHON=python3" )
   - cmd: if %compiler%==msys2-mingw ( C:\msys64\usr\bin\pacman -S --needed --noconfirm "mingw%PACMAN_BITS%/mingw-w64-%PACMAN_ARCH%-python3" "mingw%PACMAN_BITS%/mingw-w64-%PACMAN_ARCH%-python3-setuptools" )
-  # Cygwin
-  - cmd: if not %compiler%==cygwin ( set "PATH=%cd%;%MESON_PYTHON_PATH%;%PATH%;" )
-  - cmd: if %compiler%==cygwin ( set WRAPPER=ci\run-in-cygwin.bat )
-  - cmd: if %compiler%==cygwin ( %WRAPPER% which %PYTHON% ) else ( where %PYTHON% )
+
+  - cmd: set "PATH=%cd%;%MESON_PYTHON_PATH%;%PATH%;"
 
   # Setup D compiler and dub packages
   - ps: |
@@ -114,7 +107,6 @@ install:
           DownloadFile -Source 'http://nirbheek.in/files/binaries/pkg-config/win32/pkg-config.exe' `
                        -Destination 'C:\projects\meson\pkg-config.exe'
         }
-  - cmd: if %compiler%==cygwin ( call ci\appveyor-install.bat )
   - ps: |
         If($Env:compiler -like 'msvc*') {
           DownloadFile -Source "https://download.microsoft.com/download/D/B/B/DBB64BA1-7B51-43DB-8BF1-D1FB45EACF7A/msmpisdk.msi" `
