--- a/test cases/common/103 subproject subdir/meson.build
+++ b/test cases/common/103 subproject subdir/meson.build
@@ -4,3 +4,7 @@ libSub = dependency('sub', fallback: ['sub', 'libSub'])
 
 exe = executable('prog', 'prog.c', dependencies: libSub)
 test('subproject subdir', exe)
+
+# Verify the subproject has placed dependency overrides
+dependency('sub')
+dependency('sub-1.0')
