--- a/test cases/common/103 subproject subdir/subprojects/sub/lib/meson.build
+++ b/test cases/common/103 subproject subdir/subprojects/sub/lib/meson.build
@@ -1,2 +1,4 @@
 lib = static_library('sub', 'sub.c')
 libSub = declare_dependency(include_directories: include_directories('.'), link_with: lib)
+meson.override_dependency('sub-1.0', libSub)
+meson.override_dependency('sub', libSub)
