Add some test cases for separate test and benchmark targets

--- a/test cases/common/1 trivial/meson.build
+++ b/test cases/common/1 trivial/meson.build
@@ -1,8 +1,7 @@
 # Comment on the first line
 project('trivial test',
   # Comment inside a function call + array for language list
-  ['c'], default_options: ['buildtype=debug'],
-  meson_version : '>=0.52.0')
+  ['c'], default_options: ['buildtype=debug'])
 #this is a comment
 sources = 'trivial.c'
 
