Add support for Tiny C Compiler

--- a/test cases/common/36 has function/meson.build
+++ b/test cases/common/36 has function/meson.build
@@ -87,7 +87,7 @@ foreach cc : compilers
     assert(cc.has_function('alloca', prefix : '#include <alloca.h>',
            args : unit_test_args),
            'built-in alloca must be found with #include')
-    if not cc.compiles(defines_has_builtin, args : unit_test_args)
+    if not cc.compiles(defines_has_builtin, args : unit_test_args) and cc.get_id() != 'tcc'
       assert(not cc.has_function('alloca',
              prefix : '#include <alloca.h>\n#undef alloca',
              args : unit_test_args),
