--- a/test cases/native/9 override with exe/meson.build
+++ b/test cases/native/9 override with exe/meson.build
@@ -1,10 +1,10 @@
 project('myexe', 'c', version: '0.1')
 sub = subproject('sub')
 
-prog = find_program('foobar', version : '>= 2.0', required : false)
+prog = find_program('foobar', version : '>= 2.0', required : false, native : true)
 assert(not prog.found())
 
-prog = find_program('foobar', version : '>= 1.0')
+prog = find_program('foobar', version : '>= 1.0', native : true)
 custom1 = custom_target('custom1',
                         build_by_default : true,
                         input : [],
