docs: Hook up the new RefMan generator to Meson

--- a/docs/meson.build
+++ b/docs/meson.build
@@ -15,10 +15,25 @@ docs_gen = custom_target(
     build_by_default: true,
     install: false)
 
+refman_gen = custom_target(
+    'gen_refman',
+    input: files('sitemap.txt'),
+    output: 'configured_sitemap.txt',
+    depfile: 'reman_dep.d',
+    command: [
+        find_program('./genrefman.py'),
+        '-g', 'md',
+        '-s', '@INPUT@',
+        '-o', '@OUTPUT@',
+        '--depfile', '@DEPFILE@',
+        '--force-color',
+    ],
+)
+
 hotdoc = import('hotdoc')
 documentation = hotdoc.generate_doc(meson.project_name(),
     project_version: meson.project_version(),
-    sitemap: 'sitemap.txt',
+    sitemap: refman_gen,
     build_by_default: true,
     depends: docs_gen,
     index: 'markdown/index.md',
@@ -30,6 +45,7 @@ documentation = hotdoc.generate_doc(meson.project_name(),
     git_upload_repository: 'git@github.com:mesonbuild/mesonbuild.github.io.git',
     edit_on_github_repository: 'https://github.com/mesonbuild/meson',
     syntax_highlighting_activate: true,
+    keep_markup_in_code_blocks: true,
 )
 
 run_target('upload',
