--- a/docs/yaml/builtins/meson.yaml
+++ b/docs/yaml/builtins/meson.yaml
@@ -102,6 +102,15 @@ methods:
           This is useful in the case the script updates system wide
           cache that is only needed when copying files into final destination.
 
+      install_tag:
+        type: str
+        since: 0.60.0
+        description: |
+          A string used by the `meson install --tags` command
+          to install only a subset of the files.
+          By default the script has no install tag which means it is not being run when
+          `meson install --tags` argument is specified.
+
   - name: add_postconf_script
     returns: void
     description: |
