--- a/docs/yaml/functions/_build_target_base.yaml
+++ b/docs/yaml/functions/_build_target_base.yaml
@@ -175,6 +175,14 @@ kwargs:
 
       See the `install_mode` kwarg of [[install_data]] for more information.
 
+  install_tag:
+    type: str
+    since: 0.60.0
+    description: |
+      A string used by the `meson install --tags` command
+      to install only a subset of the files. By default all build targets have the
+      tag `runtime` except for static libraries that have the `devel` tag.
+
   install_rpath:
     type: str
     description: |
