--- a/docs/yaml/functions/configure_file.yaml
+++ b/docs/yaml/functions/configure_file.yaml
@@ -101,6 +101,14 @@ kwargs:
 
       See the `install_mode` kwarg of [[install_data]] for more information.
 
+  install_tag:
+    type: str
+    since: 0.60.0
+    description: |
+      A string used by the `meson install --tags` command
+      to install only a subset of the files. By default the file has no install
+      tag which means it is not being installed when `--tags` argument is specified.
+
   output:
     type: str
     description: |
