--- a/docs/yaml/functions/custom_target.yaml
+++ b/docs/yaml/functions/custom_target.yaml
@@ -151,24 +151,24 @@ kwargs:
     description: |
       If only one install_dir is provided, all outputs are installed there.
       *Since 0.40.0* Allows you to specify the installation directory for each
-        corresponding output. For example:
-        ```
-        custom_target('different-install-dirs',
-          output : ['first.file', 'second.file'],
-          install : true,
-          install_dir : ['somedir', 'otherdir])
-        ```
-        This would install `first.file` to `somedir` and `second.file` to `otherdir`.
+      corresponding output. For example:
+      ```meson
+      custom_target('different-install-dirs',
+        output : ['first.file', 'second.file'],
+        install : true,
+        install_dir : ['somedir', 'otherdir])
+      ```
+      This would install `first.file` to `somedir` and `second.file` to `otherdir`.
 
-        To only install some outputs, pass `false` for the outputs that you
-        don't want installed. For example:
-        ```
-            custom_target('only-install-second',
-              output : ['first.file', 'second.file'],
-              install : true,
-              install_dir : [false, 'otherdir])
-        ```
-        This would install `second.file` to `otherdir` and not install `first.file`.
+      To only install some outputs, pass `false` for the outputs that you
+      don't want installed. For example:
+      ```meson
+          custom_target('only-install-second',
+            output : ['first.file', 'second.file'],
+            install : true,
+            install_dir : [false, 'otherdir])
+      ```
+      This would install `second.file` to `otherdir` and not install `first.file`.
 
   install_mode:
     type: list[str | int]
@@ -176,6 +176,18 @@ kwargs:
     description: |
       The file mode and optionally the owner/uid and group/gid.
       See the `install_mode` kwarg of [[install_data]] for more information.
+
+  install_tag:
+    type: list[str]
+    since: 0.60.0
+    description: |
+      A list of strings, one per output, used by the `meson install --tags` command
+      to install only a subset of the files.
+
+      By default all outputs have no install tag which means they are not being
+      installed when `--tags` argument is specified. If only one tag is specified,
+      it is assumed that all outputs have the same tag. `false` can be used for
+      outputs that have no tag or are not installed.
 
   output:
     type: list[str]
