--- a/docs/yaml/functions/install_data.yaml
+++ b/docs/yaml/functions/install_data.yaml
@@ -35,6 +35,14 @@ kwargs:
 
       To leave any of these three as the default, specify `false`.
 
+  install_tag:
+    type: str
+    since: 0.60.0
+    description: |
+      A string used by the `meson install --tags` command
+      to install only a subset of the files. By default these files have no install
+      tag which means they are not being installed when `--tags` argument is specified.
+
   rename:
     type: list[str]
     since: 0.46.0
