--- a/docs/yaml/functions/install_subdir.yaml
+++ b/docs/yaml/functions/install_subdir.yaml
@@ -68,6 +68,14 @@ kwargs:
 
       See the `install_mode` kwarg of [[install_data]] for more information.
 
+  install_tag:
+    type: str
+    since: 0.60.0
+    description: |
+      A string used by the `meson install --tags` command
+      to install only a subset of the files. By default these files have no install
+      tag which means they are not being installed when `--tags` argument is specified.
+
   exclude_files:
     type: list[str]
     description: |
