--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -3,7 +3,7 @@ name: Update website
 concurrency:
   group: mesonbuild.com
   # We do NOT want `cancel-in-progress` here since only one website job
-  # should run at a time to avoid upload race condtions.
+  # should run at a time to avoid upload race conditions.
 
 on:
   push:
