add install_emptydir function
This replaces the absolute hack of using

```
install_subdir('nonexisting', install_dir: 'share')
```

which requires you to make sure you don't accidentally or deliberately
have a completely different directory with the same name in your source
tree that is full of files you don't want installed. It also avoids
splitting the name in two and listing them in the wrong order.

You can also set the install mode of each directory component by listing
them one at a time in order, and in fact create nested structures at
all.

Fixes #1604
Properly fixes #2904

--- a/docs/yaml/functions/install_subdir.yaml
+++ b/docs/yaml/functions/install_subdir.yaml
@@ -5,9 +5,12 @@ description: |
   source tree to the location specified by the keyword argument
   `install_dir`.
 
-  If the subdirectory does not exist in the source tree, an empty directory is
-  created in the specified location. *(since 0.45.0)* A newly created
-  subdirectory may only be created in the keyword argument `install_dir`.
+  *(since 0.45.0, deprecated since 0.60.0)* If the subdirectory does not exist
+  in the source tree, an empty directory is created in the specified location.
+  A newly created subdirectory may only be created in the keyword argument
+  `install_dir`. There are a number of flaws with this method, and it was never
+  intentionally designed to work this way, please use [[install_emptydir]]
+  instead.
 
 example: |
   For a given directory `foo`:
