--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -11,6 +11,9 @@ on:
       - master
     paths:
       - docs/**
+  pull_request:
+    paths:
+      - docs/**
   workflow_dispatch:
   release:
     types:
