pass all outputs of a custom_target as arguments to a test
Meson was passing only the first output and warning about it.  To do this
easily, refactor construct_target_rel_path to return a list.

Signed-off-by: Paolo Bonzini <pbonzini@redhat.com>

--- a/test cases/common/245 custom target index source/meson.build
+++ b/test cases/common/245 custom target index source/meson.build
@@ -46,5 +46,6 @@ exe_together = executable('exe_together',
   install: false,
 )
 
-test('exe_separate', exe_separate)
-test('exe_together', exe_together)
+# also cover passing custom target to tests as arguments
+test('exe_separate', exe_separate, args: ['unused1', 'unused2'])
+test('exe_together', exe_together, args: gen)
