port from embedded data to importlib.resources

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,10 +48,11 @@ typing =
 
 [options.package_data]
 mesonbuild.scripts = cmd_or_ps.ps1
+mesonbuild.cmake.data = *
+mesonbuild.dependencies.data = *
 
 [options.packages.find]
 include = mesonbuild, mesonbuild.*
-exclude = *.data
 
 [tool:pytest]
 python_classes =
