--- a/docs/yaml/functions/executable.yaml
+++ b/docs/yaml/functions/executable.yaml
@@ -13,9 +13,9 @@ description: |
 warnings:
   - The `link_language` kwarg was broken until 0.55.0
 
-posargs_inherit: _build_target_base
-varargs_inherit: _build_target_base
-kwargs_inherit: _build_target_base
+posargs_inherit: _build_target_linkable
+varargs_inherit: _build_target_linkable
+kwargs_inherit: _build_target_linkable
 
 kwargs:
   export_dynamic:
