--- a/docs/yaml/functions/jar.yaml
+++ b/docs/yaml/functions/jar.yaml
@@ -6,9 +6,9 @@ description: |
   `main_class` which specifies the main class to execute when running
   the jar with `java -jar file.jar`.
 
-posargs_inherit: _build_target_base
-varargs_inherit: _build_target_base
-kwargs_inherit: _build_target_base
+posargs_inherit: _build_target_linkable
+varargs_inherit: _build_target_linkable
+kwargs_inherit: _build_target_linkable
 
 kwargs:
   main_class:
