--- a/docs/yaml/functions/shared_library.yaml
+++ b/docs/yaml/functions/shared_library.yaml
@@ -9,9 +9,9 @@ notes:
   [[shared_library]] instead, if you need to both
   `dlopen()` and link with a library.
 
-posargs_inherit: _build_target_base
-varargs_inherit: _build_target_base
-kwargs_inherit: _build_target_base
+posargs_inherit: _build_target_linkable
+varargs_inherit: _build_target_linkable
+kwargs_inherit: _build_target_linkable
 
 kwargs:
   version:
