--- a/docs/yaml/functions/shared_module.yaml
+++ b/docs/yaml/functions/shared_module.yaml
@@ -13,9 +13,9 @@ description: |
   you will need to set the `export_dynamic` argument of the executable to
   `true`.
 
-posargs_inherit: _build_target_base
-varargs_inherit: _build_target_base
-kwargs_inherit: _build_target_base
+posargs_inherit: _build_target_linkable
+varargs_inherit: _build_target_linkable
+kwargs_inherit: _build_target_linkable
 
 kwargs:
   vs_module_defs:
