--- a/docs/yaml/functions/static_library.yaml
+++ b/docs/yaml/functions/static_library.yaml
@@ -2,9 +2,9 @@ name: static_library
 returns: lib
 description: Builds a static library with the given sources.
 
-posargs_inherit: _build_target_base
-varargs_inherit: _build_target_base
-kwargs_inherit: _build_target_base
+posargs_inherit: _build_target_linkable
+varargs_inherit: _build_target_linkable
+kwargs_inherit: _build_target_linkable
 
 kwargs:
   pic:
