modules/gnome: allow building gtkdoc documentation during build
This fixes a long-standing bug where gtkdoc documentation is
built during the installation step. Directly reverting this
behavior is not possible because some users depend on that
bug. Aim to solve this in the long-run by introducing an option
which allows building during build and prints a warning if that
is not the case. A later meson release should deprecate the
option and finally remove it to force users to not depend on
the bug.

--- a/test cases/frameworks/10 gtk-doc/doc/foobar1/meson.build
+++ b/test cases/frameworks/10 gtk-doc/doc/foobar1/meson.build
@@ -12,4 +12,5 @@ gnome.gtkdoc('foobar',
   # https://github.com/mesonbuild/meson/issues/8744
   gobject_typesfile: 'foobar.types',
   install : true,
-  check: false)
+  check: false,
+  build_during_build : true)
