--- a/test cases/frameworks/10 gtk-doc/doc/foobar3/meson.build
+++ b/test cases/frameworks/10 gtk-doc/doc/foobar3/meson.build
@@ -3,4 +3,5 @@ gnome.gtkdoc('foobar',
   src_dir : inc,
   main_sgml : 'foobar-docs.sgml',
   content_files : [docbook, version_xml],
-  install : true)
+  install : true,
+  build_during_build : true)
