tests: Add a partial test for gtk_doc check: kwarg
check: true is needed for an actual regression test, but that requires
a pedantically correct gtk-doc configuration, which I attempted to do
and failed. So let's just put check: false so we get *some* coverage:
just that typed_kwargs accepts the argument.

Related to https://github.com/mesonbuild/meson/pull/9807

--- a/test cases/frameworks/10 gtk-doc/doc/foobar1/meson.build
+++ b/test cases/frameworks/10 gtk-doc/doc/foobar1/meson.build
@@ -11,4 +11,5 @@ gnome.gtkdoc('foobar',
   # Manually written types file for regression test:
   # https://github.com/mesonbuild/meson/issues/8744
   gobject_typesfile: 'foobar.types',
-  install : true)
+  install : true,
+  check: false)
