Rename JDK system dep to JNI
JNI is a more apt name because it currently only supports the JNI. I
also believe that CMake uses the terminology JNI here as well.

JNI is currently the only way to interact with the JVM through native
code, but there is a project called "Project Panama" which aims to be
another way for native code to interact with the JVM.

--- a/test cases/java/9 jni/meson.build
+++ b/test cases/java/9 jni/meson.build
@@ -1,11 +1,11 @@
-project('jdkjava', ['c', 'java'])
+project('jnijava', ['c', 'java'])
 
 if build_machine.system() == 'cygwin'
   error('MESON_SKIP_TEST: cygwin test failures')
 endif
 
 if build_machine.system() == 'windows' and build_machine.cpu_family() == 'x86'
-  error('MESON_SKIP_TEST: failing builds on 32bit Windows because a 32bit JDK isn not available in the Azure Pipelines Windows images')
+  error('MESON_SKIP_TEST: failing builds on 32bit Windows because a 32bit JDK is not available in the Azure Pipelines Windows images')
 endif
 
 fs = import('fs')
@@ -13,7 +13,7 @@ javamod = import('java')
 
 java = find_program('java')
 
-jdk = dependency('jdk', version : '>=1.8')
+jni_dep = dependency('jni', version : '>=1.8')
 
 # generate native headers
 subdir('src/com/mesonbuild')
