--- a/test cases/java/9 jni/src/com/mesonbuild/meson.build
+++ b/test cases/java/9 jni/src/com/mesonbuild/meson.build
@@ -1,3 +1,3 @@
 native_headers = javamod.generate_native_headers(
-  'JdkTest.java', package: 'com.mesonbuild', classes: ['JdkTest'])
+  'JniTest.java', package: 'com.mesonbuild', classes: ['JdkTest'])
 native_header_includes = include_directories('.')
