modules/python: Add support for python2 and python3 native file keys
This was initially mentioned in the commit that added support for native file:
https://github.com/mesonbuild/meson/commit/71a5f990d09f04d8eb8d636abf7e2b446fdf826a

--- a/test cases/unit/47 native file binary/meson_options.txt
+++ b/test cases/unit/47 native file binary/meson_options.txt
@@ -1,5 +1,12 @@
 option(
   'case',
   type : 'combo',
-  choices : ['find_program', 'config_dep', 'python3', 'python']
+  choices : [
+    'find_program',
+    'config_dep',
+    'python3',
+    'python-implicit',
+    'python-python2',
+    'python-python3',
+  ]
 )
