--- a/test cases/unit/47 native file binary/meson.build
+++ b/test cases/unit/47 native file binary/meson.build
@@ -14,8 +14,16 @@ elif case == 'python3'
   prog = import('python3').find_python()
   result = run_command(prog, ['--version'], check: true)
   assert(result.stdout().strip().endswith('12345'), 'Didn\'t load python3 from config file')
-elif case == 'python'
+elif case == 'python-implicit'
   prog = import('python').find_installation()
+  result = run_command(prog, ['--version'], check: true)
+  assert(result.stdout().strip().endswith('12345'), 'Didn\'t load python from config file')
+elif case == 'python-python2'
+  prog = import('python').find_installation('python2')
+  result = run_command(prog, ['--version'], check: true)
+  assert(result.stdout().strip().endswith('12345'), 'Didn\'t load python from config file')
+elif case == 'python-python3'
+  prog = import('python').find_installation('python3')
   result = run_command(prog, ['--version'], check: true)
   assert(result.stdout().strip().endswith('12345'), 'Didn\'t load python from config file')
 endif
